Add Contact page and modify the existed code

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "cabbuddy",
+  "name": "CabBuddy",
   "version": "1.0.0",
   "description": "Cab Sharing Portal",
-  "main": "index.js",
+  "main": "app.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
